mudando com do botão editar

--- a/application/views/scripts/beneficio/deficiente.phtml
+++ b/application/views/scripts/beneficio/deficiente.phtml
@@ -28,7 +28,7 @@
 			                            <td> <?= $solicitacaobeneficio['data_solicitacao'] ?></td>
 			                            <td> <?= $solicitacaobeneficio['idf_situacao_solicitacao'] ?>
 			                            	<a href="<?= '#myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" class="btn" data-toggle="modal"> 
-											<i class="fas fa-edit" style="color:black"></i>
+											<i class="fas fa-edit" style="color:white"></i>
 										</a>
 			                            </td>
 			                        </tr>
