--- a/application/views/scripts/beneficio/deficiente.phtml
+++ b/application/views/scripts/beneficio/deficiente.phtml
@@ -28,8 +28,8 @@
 			                            <td> <?= $solicitacaobeneficio['data_solicitacao'] ?></td>
 			                            <td> <?= $solicitacaobeneficio['idf_situacao_solicitacao'] ?>
 			                            	<a href="<?= '#myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" class="btn" data-toggle="modal"> 
-											<i class="fas fa-edit" style="color:white"></i>
-										</a>
+												<i class="fas fa-edit" style="color:white"></i>
+											</a>
 			                            </td>
 			                        </tr>
 			                           <? endforeach; ?>
@@ -57,7 +57,7 @@
 									<label >Nome completo:</label>
 									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['nome'] ?> " name="nomeCompleto" id="nomeCompleto">
 									<label >Data de nascimento:</label>
-									<input type="date" disabled class="form-control" name="dataNascimento" id="dataNascimento">
+									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['data_nascimento'] ?>" name="dataNascimento" id="dataNascimento">
 									<label >CPF:</label>
 									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['cpf'] ?>" name="cpf" id="cpf">
 									<label >RG:</label>
