Ajustando tamanho da tabela da concessao trajeto

--- a/application/views/scripts/concessaoTrajeto/index.phtml
+++ b/application/views/scripts/concessaoTrajeto/index.phtml
@@ -9,27 +9,29 @@
 
 
 <div class="container fundo">
-	<div class="row" style="background-color:rgba(0,0,0,0.5);">
+
 
 	</div><br>
     <div class="row">
-		<div class="col-sm-2"> 
+		<div class="col-sm-2" > 
 	
 		</div>
 		
 		<div class="col-sm-8" style="background-color:rgba(0,0,0,0.8); color: white">
-			<center><H3>Concessão de Trajetos </h3></center>
-			<div class="row"> 
-				&nbsp;&nbsp;&nbsp;&nbsp;
-				<button class="btn" id="botaoAdicionarConcessao" data-toggle="modal" data-target="#modal-mensagem"> 
-					<i class="fas fa-plus-square" style="color:black"></i>
-					<label style="color:black"> Nova Concessão </label>
-				</button>
+			<div class="fundoTransparente" style="background-color:rgba(0,0,0,0.5); color: white">
+				<center><H3>Concessão de Trajetos </H3></center>
+				<div class="row"> 
+					&nbsp;&nbsp;&nbsp;&nbsp;
+					<button class="btn" id="botaoAdicionarConcessao" data-toggle="modal" data-target="#modal-mensagem"> 
+						<i class="fas fa-plus-square" style="color:black"></i>
+						<label style="color:black"> Nova Concessão </label>
+					</button>
+				</div>
+				<br>
 			</div>
-			<br>
 				<div class="row"> 
 		            <table class="table table-hover table-bordered dataTable" style="width: 100%;">
-		                <thead>
+		                <thead class="fundoTransparente" style="background-color:rgba(0,0,0,0.5); color: white">
 		                    <tr>
 		                        <th>Código</th>
 		                        <th>Data de Inicio</th>
@@ -83,14 +85,6 @@
 		                </tbody>
 		            </table>
         		</div>
-
-
-
-
-
-
-
-
 			</div>
 
 			
