atualizando tabela com o location.reload()

--- a/application/views/scripts/concessaoTrajeto/index.phtml
+++ b/application/views/scripts/concessaoTrajeto/index.phtml
@@ -163,6 +163,7 @@
 							        		},
 							        		success: function () {
 							        			$(".alert-success").removeAttr("style");
+							        			location.reload();
 							        		},
 							        		error: function () {
 							        			alert("Error");
