Algumas validações de campos e botão on/off funcionando.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -95,7 +95,8 @@
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/mask.js') ?>"></script>
-        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/trajeto.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/cobrador.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.js') ?>"></script>
         <?= $this->headScript(); ?>
         <script>
         
