--- a/application/views/scripts/cobrador/editar.phtml
+++ b/application/views/scripts/cobrador/editar.phtml
@@ -6,6 +6,8 @@
 	
 	<title>Document</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/cobrador.css") ?> />
+
 
 	
 
@@ -24,23 +26,87 @@
 			<div class="form-group" >
 				
 				<h2 style="color:white">Cadastro de Cobradores</h2>
-				<div class="row" >
+				
+				<!-- fim cad velho -->
+						<input type="hidden" id="id_cobrador" name="id_cobrador" value="<? echo $this->cobrador['id_cobrador'] ?>">
+
+				      <?php if ($this->cobrador->getAtivo() === 'ATIVO'): ?>
+                            <div class="btn-group" id="status" data-toggle="buttons">
+                                <label class="btn btn-default plug status-on btn-on aberto active">
+                                    <input type="radio" name="plug" checked="checked">ATIVO</label>
+                                <label class="btn btn-default plug status-off btn-off fechado">
+                                    <input type="radio" name="plug">INATIVO</label>
+                            </div>
+                        <?php endif; ?>
+
+                        <?php if ($this->cobrador->getAtivo() === 'INATIVO'): ?>
+                            <div class="btn-group" id="status" data-toggle="buttons">
+                                <label class="btn btn-default status-on btn-on plug aberto">
+                                    <input type="radio" name="plug" checked="checked">ATIVO</label>
+                                <label class="btn btn-default status-off btn-off plug fechado active">
+                                    <input type="radio" name="plug">INATIVO</label>
+                            </div>
+                        <?php endif; ?>
+
+
+				
+				<div class="row"  >
+					
+
 					
 					
-					<div class="col-8" >
-						<label for="nome-cobrador" id="label" >Nome</label>
+					<div class="col-7" >
+						
 						<input type="hidden" id="id-cobrador" name="id-cobrador" value="<?php echo $this->cobrador->getId_cobrador(); ?>">
+						<label for="nome-cobrador" id="label">Nome</label>
   			 			<input type="text" name="nome-cobrador" class="form-control" id="nome-cobrador" placeholder="Insira o nome completo" value="<?php echo $this->cobrador->getNome(); ?>">
 
 					</div>
-					<div class="col-4" >
+					<div class="col-2" >
 						<label for="cpf" id="label">CPF</label>
   			 			<input type="text" name="cpf-cobrador" class="form-control" id="cpf-cobrador" placeholder="Digite o CPF" value="<?php echo $this->cobrador->getCpf(); ?>">
+
+					</div>
+					<div class="col-3" >
+						<label for="rg-cobrador" id="label">RG</label>
+  			 			<input type="text" name="rg-cobrador" class="form-control" id="rg-cobrador" placeholder="Digite o RG" value="<?php echo $this->cobrador->getRg(); ?>">
 
 					</div>
 					
 
 				</div>
+				<div class="row">
+					
+					<div class="col-3" >
+						<label for="carteiraTrabalho-cobrador" id="label">Carteira de trabalho</label>
+  			 			<input type="text" name="carteiraTrabalho-cobrador" class="form-control" id="carteiraTrabalho-cobrador" placeholder="Digite o nº da Carteira de Trabalho" value="<?php echo $this->cobrador->getCarteiraTrabalho(); ?>">
+
+					</div>
+
+					<div class="col-3" >
+						<label for="pis-cobrador" id="label">Número do PIS</label>
+  			 			<input type="text" name="pis-cobrador" class="form-control" id="pis-cobrador" placeholder="Digite o PIS" value="<?php echo $this->cobrador->getPis(); ?>">
+
+					</div>
+					<div class="col-3" >
+						<label for="cnh-cobrador" id="label">CNH</label>
+  			 			<input type="text" name="cnh-cobrador" class="form-control" id="cnh-cobrador" placeholder="Digite a CNH" value="<?php echo $this->cobrador->getCnh(); ?>">
+
+					</div>
+
+					
+
+					<div class="col-3" >
+						<label for="dataAdmissao-cobrador" id="label">Data de admissão</label>
+  			 			<input type="date" name="dataAdmissao-cobrador" class="form-control" id="dataAdmissao-cobrador" placeholder="Digite a data de admissão" value="<?php echo $this->cobrador->getDataAdmissao(); ?>">
+
+					</div>
+
+
+				</div>
+
+				<!-- fim cad novo -->
+
 				<div class="row">
 					<div class="col-11">
 						
