--- a/application/views/scripts/cobrador/index.phtml
+++ b/application/views/scripts/cobrador/index.phtml
@@ -59,28 +59,89 @@
 				<div class="row" >
 					
 					
-					<div class="col-8" >
+					<div class="col-1" >
+						
+
+					</div>
+					<div class="col-6" >
 						<label for="nome-cobrador" id="label">Nome</label>
   			 			<input type="text" name="nome-cobrador" class="form-control" id="nome-cobrador" placeholder="Insira o nome completo">
 
 					</div>
-					<div class="col-4" >
+					<div class="col-2" >
 						<label for="cpf" id="label">CPF</label>
   			 			<input type="text" name="cpf-cobrador" class="form-control" id="cpf-cobrador" placeholder="Digite o CPF">
+
+					</div>
+					<div class="col-3" >
+						<label for="rg-cobrador" id="label">RG</label>
+  			 			<input type="text" name="rg-cobrador" class="form-control" id="rg-cobrador" placeholder="Digite o RG">
 
 					</div>
 					
 
 				</div>
 				<div class="row">
-					<div class="col-11">
-						
+					
+					<div class="col-3" >
+						<label for="carteiraTrabalho-cobrador" id="label">Carteira de trabalho</label>
+  			 			<input type="text" name="carteiraTrabalho-cobrador" class="form-control" id="carteiraTrabalho-cobrador" placeholder="Digite o RG">
 
 					</div>
-					<div class="col-1" style="padding: 10px;">
-						<button class="btn btn-outline-success btn-lt" type="submit" id="gravar">
+
+					<div class="col-3" >
+						<label for="pis-cobrador" id="label">Número do PIS</label>
+  			 			<input type="text" name="pis-cobrador" class="form-control" id="pis-cobrador" placeholder="Digite o PIS">
+
+					</div>
+					<div class="col-3" >
+						<label for="cnh-cobrador" id="label">CNH</label>
+  			 			<input type="text" name="cnh-cobrador" class="form-control" id="cnh-cobrador" placeholder="Digite a CNH">
+
+					</div>
+
+					
+
+					<div class="col-3" >
+						<label for="dataAdmissao-cobrador" id="label">Data de admissão</label>
+  			 			<input type="date" name="dataAdmissao-cobrador" class="form-control" id="dataAdmissao-cobrador" placeholder="Digite a data de admissão">
+
+					</div>
+
+
+				</div>
+				<div class="row">
+					<div class="col-12" style="padding: 15px">
+						
+					
+					
+					<div class="alert alert-success " style="display:none;" role="alert">
+                  			Cadastro de conta realizado com sucesso!
+               			</div>
+               			
+
+               			<div class="alert alert-danger nome" style="display:none;" role="alert">
+                    		O campo NOME é de preenchimento obrigatório!
+                		</div>
+
+                		<div class="alert alert-danger cpf" style="display:none;" role="alert">
+                    		CPF inválido!
+                		</div>
+
+                		<div class="alert alert-danger ff" style="display:none;" role="alert">
+                    		CPF inválido!
+                		</div>
+						
+
+						<button class="btn btn-outline-success btn-lg btn-block cadastrar-cobrador" type="button" id="gravar">
 							Gravar
 						</button>
+
+						</div>
+
+
+
+						
 
 					</div>
 				</div>
@@ -98,9 +159,9 @@
 		<table class="table" >
   <thead>
     <tr>
-      <th scope="col">Código</th>
       <th scope="col">Nome</th>
-      <th scope="col">CPF</th>
+      <th scope="col">Cpf</th>
+      <th scope="col">Data de admissão</th>
       <th scope="col">Ações</th>
       
       
@@ -111,9 +172,9 @@
 		
     <tr>
       
-      <td><?= $cobrador->getId_cobrador() ?>	</td>
       <td><?= $cobrador->getNome() ?>	</td>
       <td><?= $cobrador->getCpf() ?>	</td>
+      <td><?= $cobrador->getDataAdmissao() ?>	</td>
       <td><a class="btn btn-info btn-labeled" href="<?= $this->baseUrl('cobrador/editar/id/' . $cobrador['id_cobrador']) ?>"
 
 
