--- a/application/views/scripts/cobrador/index.phtml
+++ b/application/views/scripts/cobrador/index.phtml
@@ -59,11 +59,7 @@
 				<div class="row" >
 					
 					
-					<div class="col-1" >
-						
-
-					</div>
-					<div class="col-6" >
+					<div class="col-5" >
 						<label for="nome-cobrador" id="label">Nome</label>
   			 			<input type="text" name="nome-cobrador" class="form-control" id="nome-cobrador" placeholder="Insira o nome completo">
 
@@ -71,6 +67,11 @@
 					<div class="col-2" >
 						<label for="cpf" id="label">CPF</label>
   			 			<input type="text" name="cpf-cobrador" class="form-control" id="cpf-cobrador" placeholder="Digite o CPF">
+
+					</div>
+					<div class="col-2" >
+						<label for="telefone-cobrador" id="label">Telefone</label>
+  			 			<input type="text" name="telefone-cobrador" class="form-control" id="telefone-cobrador" placeholder="Digite o telefone">
 
 					</div>
 					<div class="col-3" >
