--- a/application/views/scripts/trajeto/index.phtml
+++ b/application/views/scripts/trajeto/index.phtml
@@ -29,30 +29,22 @@
 		Trajetos
 	</h1>
 
-	<div class="container" style="background-color: rgba(0,0,0,0.7);">
+	<div class="container" style="background-color: rgba(0,0,0,0.8);">
 		
-		<div class="row">
-			<div class="col-6">
+		<div class="row" style="padding: 15px;">
 			
-			</div>
 
-			<div class="col-6" style="padding: 10px;">
-				<button class="btn btn-dark btn-lt" type="button" id="novo_trajeto"   >
+			
+				<button class="btn btn-outline-primary btn-lt" type="button" id="novo_trajeto" >
 				Novo Trajeto</button>
-				<button class="btn btn-dark btn-lt" type="button" id="nova_parada"   >
-				Nova Parada</button>
-				<button class="btn btn-dark btn-lt" type="button"   >
-				Editar Trajeto</button>
-				<button class="btn btn-dark btn-lt" type="button"   >
-				Editar Parada</button>
-
-			</div>
+				
+			
 
 
 		</div>
 	</div>
 	
-	<div class="container" style="background-color: rgba(0,0,0,0.7);" id="cad_trajeto">
+	<div class="container" style="background-color: rgba(0,0,0,0.8);" id="cad_trajeto">
 	<form action="TrajetoController.php" method="post">
 	<div class="form-group">
 		<div class="row" style="padding-bottom: 10px;" >
@@ -151,14 +143,13 @@
 			</div>
 		</div>	
 
-		<div class="row" style="padding-bottom: 10px;">
-			<div class="col-9" ></div>
-		<div class="col-3" >
-			<button class="btn btn-dark btn-lt" type="button"   >
-				Cancelar</button>
-			<button class="btn btn-dark btn-lt" type="submit"   >
+		<div class="row" style="padding: 15px;">
+			
+		
+			
+			<button class="btn btn-outline-success btn-lg btn-block" type="submit"   >
 				Gravar</button>
-		</div>
+		
 	
 		</div>
 	</div>  <!-- fim form group-->
